<resources>
    <string name="app_name">Library++</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="register">"Register"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="google">Sign in with Google</string>
    <string name="sign_up">Sign Up</string>
    <string name="account_exists">Already have an account? Sign in</string>
    <string name="search_by_title">Search By Title</string>
    <string name="search_by_isbn">Search By ISBN</string>
    <string name="favorite">Favorites</string>
    <string name="title_camera">Camera View</string>
    <string name="title_account">Account</string>
    <string name="acct_name">Account Name</string>
    <string name="acct_email">Account Email</string>
    <string name="logout">Logout</string>
    <string name="uri_placeholder">Uri placeholder</string>
    <string name="fullname">Full Name</string>
    <string name="add_favorite">Add to Favorites</string>
    <string name="mark_favorite">Mark Favorite</string>
    <string name="toggle_search">Toggle Search</string>
    <string name="toggle_view">Toggle AR Views</string>
    <string name="check_coin">Prices</string>
    <string name="check_info">Author Related</string>
    <string name="check_book">Book Information</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="clear">Clear</string>
    <string name="price">Price:</string>
    <string name="buy_google">Buy</string>
    <string name="book_description">Description:</string>
    <string name="book_page_count">Page Count:</string>
    <string name="book_average_rating">Average Rating:</string>
    <string name="book_publisher">Publisher:</string>
    <string name="author_name">Author:</string>
    <string name="author_books">Books:</string>
    <string name="book_categories">Categories:</string>
    <string name="placeholder">placeholder!</string>
    <string name="not_available">N/A</string>
    <string name="ok_dialog">Ok</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_author">Enter Author</string>
    <string name="scan_book">Scan Book!</string>
    <string name="more_info">More Information!</string>
    <string name="registration">Registration</string>
    <string name="settings">Settings</string>
    <string name="change_username">Change Username</string>
    <string name="change_password">Change Password</string>
    <string name="clear_shelf">Clear Shelf</string>
    <string name="filter">Filter</string>
    <string name="by_author">By Author</string>
    <string name="expanded_book_information">Expanded Book Information</string>
    <string name="published_date">Published Date:</string>
    <string name="rating_stars">rating stars</string>
    <string name="author_works">Author Works:</string>
    <string name="categories">Categories:</string>
    <string name="about">About:</string>
    <string name="barcode">Barcode</string>
</resources>
