<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_bg">

            <TextView
                android:id="@+id/average_rating_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_average_rating"
                android:layout_margin="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/average_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:layout_margin="10dp"
                app:layout_constraintStart_toEndOf="@id/average_rating_field"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/page_count_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/book_page_count"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/average_rating" />

            <TextView
                android:id="@+id/page_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:layout_margin="10dp"
                app:layout_constraintStart_toEndOf="@id/page_count_field"
                app:layout_constraintTop_toBottomOf="@id/average_rating" />


            <TextView
                android:id="@+id/publisher_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_publisher"
                android:layout_margin="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/page_count_field" />

            <TextView
                android:id="@+id/publisher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/placeholder"
                app:layout_constraintStart_toEndOf="@id/publisher_field"
                app:layout_constraintTop_toBottomOf="@id/page_count" />

            <TextView
                android:id="@+id/description_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_description"
                android:layout_margin="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/publisher_field" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:layout_margin="10dp"
                app:layout_constraintStart_toEndOf="@id/description_field"
                app:layout_constraintTop_toBottomOf="@id/publisher" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
