<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="infoViewModel"
            type="com.example.library.home.InfoViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_shadow_start_color">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_margin="8dp"
                android:background="@color/cardview_light_background">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/book_card_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        tools:srcCompat="@drawable/ic_launcher_background"
                        app:imageUrl="@{infoViewModel.bookImageUrl}"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/book_card_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@{infoViewModel.title}"
                        android:layout_margin="8dp"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                        app:layout_constraintStart_toEndOf="@id/book_card_img"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <TextView
                        android:id="@+id/publisher_field"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                        android:text="@string/published_date"
                        android:layout_margin="8dp"
                        app:layout_constraintStart_toEndOf="@id/book_card_img"
                        app:layout_constraintTop_toBottomOf="@id/book_card_title" />

                    <TextView
                        android:id="@+id/publisher"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{infoViewModel.publishedDate}"
                        android:layout_margin="8dp"
                        app:layout_constraintStart_toEndOf="@id/publisher_field"
                        app:layout_constraintTop_toBottomOf="@id/book_card_title" />


                    <TextView
                        android:id="@+id/rating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                        android:text="@string/book_average_rating"
                        app:layout_constraintTop_toBottomOf="@id/publisher_field"
                        app:layout_constraintStart_toEndOf="@id/book_card_img" />

                    <TextView
                        android:id="@+id/rating_val"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@{infoViewModel.rating}"
                        app:layout_constraintStart_toEndOf="@id/rating"
                        app:layout_constraintTop_toBottomOf="@id/publisher" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        app:layout_constraintTop_toBottomOf="@id/publisher_field"
                        app:layout_constraintStart_toEndOf="@id/rating_val"
                        tools:src="@drawable/ic_star_black_24dp"
                        android:contentDescription="@string/rating_stars" />

                    <TextView
                        android:id="@+id/page_count_field"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                        app:layout_constraintStart_toEndOf="@id/book_card_img"
                        app:layout_constraintTop_toBottomOf="@id/rating"
                        android:text="@string/book_page_count" />

                    <TextView
                        android:id="@+id/page_count"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        app:layout_constraintStart_toEndOf="@id/page_count_field"
                        app:layout_constraintTop_toBottomOf="@id/rating"
                        android:text="@{infoViewModel.pageCount}" />

                    <TextView
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@{infoViewModel.description}"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/book_card_img" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@color/cardview_light_background">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/author_card_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        app:imageUrl="@{infoViewModel.authorImageUrl}"
                        tools:srcCompat="@drawable/ic_launcher_background"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/author_card_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{infoViewModel.authorName}"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                        android:layout_margin="8dp"
                        app:layout_constraintStart_toEndOf="@id/author_card_img"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/author_books_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/author_works"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                        app:layout_constraintTop_toBottomOf="@id/author_card_name"
                        app:layout_constraintStart_toEndOf="@id/author_card_img" />


                    <ListView
                        android:id="@+id/author_books"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:divider="@null"
                        app:layout_constraintStart_toEndOf="@id/author_card_img"
                        app:layout_constraintTop_toBottomOf="@id/author_books_title"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <TextView
                        android:id="@+id/author_about"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/about"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
                        app:layout_constraintTop_toBottomOf="@id/author_books"
                        app:layout_constraintStart_toEndOf="@id/author_card_img" />

                    <TextView
                        android:id="@+id/author_categories"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@{infoViewModel.about}"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/author_card_img" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>
</layout>